fix: rename ecosystem config to .cjs and fix PM2 scripts

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "dev": "tsx watch app/bot.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "pnpm run build && pm2 start ecosystem.config.js",
-    "stop": "pm2 stop coc",
-    "restart": "pm2 restart coc",
-    "logs": "pm2 logs coc",
+    "prod": "pnpm run build && pm2 start ecosystem.config.cjs",
+    "stop": "pm2 stop coc-bot",
+    "restart": "pm2 restart coc-bot",
+    "logs": "pm2 logs coc-bot",
     "status": "pm2 status",
     "monit": "pm2 monit"
   },
