--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod": "pnpm run build && pm2 start ecosystem.config.cjs",
-    "stop": "pm2 stop coc-bot",
-    "restart": "pm2 restart coc-bot",
-    "logs": "pm2 logs coc-bot",
+    "stop": "pm2 stop coc",
+    "restart": "pm2 restart coc",
+    "logs": "pm2 logs coc",
     "status": "pm2 status",
     "monit": "pm2 monit"
   },
