--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "type": "module",
   "main": "dist/app/bot.js",
   "scripts": {
-    "start": "node dist/app/bot.js",
+    "start": "node --experimental-specifier-resolution=node dist/app/bot.js",
     "dev": "tsx watch app/bot.ts",
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod": "pnpm run build && pm2 start ecosystem.config.cjs",
     "stop": "pm2 stop coc",
