fix: update entry point and build configuration

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "ISC",
   "author": "",
   "type": "module",
-  "main": "dist/app/bot.js",
+  "main": "dist/app/index.js",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node dist/app/bot.js",
-    "dev": "tsx watch app/bot.ts",
-    "build": "rm -rf dist && tsc",
+    "start": "node --experimental-specifier-resolution=node dist/app/index.js",
+    "dev": "tsx watch app/index.ts",
+    "build": "rm -rf dist && ./node_modules/.bin/tsc --listFiles && ./node_modules/.bin/tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod": "pnpm run build && pm2 start ecosystem.config.cjs",
     "stop": "pm2 stop coc",
